# project-mgmt-kanban

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  config.py  db.py  dependencies.py  main.py  schemas.py  security.py  seed.py
backend/app/routers/: auth.py  board.py  chat.py
backend/app/static/: index.html
backend/tests/: test_ai.py  test_db.py  test_main.py  test_security.py  test_seed_parity.py
docs/: ARCHITECTURE.md  DATABASE.md  ROADMAP.md  code_review.md
frontend/: AGENTS.md  README.md  e2e-server.mjs  playwright.config.ts
frontend/src/app/: layout.tsx
frontend/src/components/: AuthGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.tsx  NewCardForm.tsx  Workspace.test.tsx  Workspace.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/tests/: auth.spec.ts  boards.spec.ts  chat.spec.ts  helpers.ts  kanban.spec.ts
scripts/: AGENTS.md  start.bat  start.sh  stop.bat  stop.sh
