[project]
name = "pm-backend"
version = "0.1.0"
description = "Project Management Studio backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "itsdangerous>=2.2",
    "openai>=1.50",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
pythonpath = ["."]
